airflow-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: airflow-webserver
  namespace: airflow
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/proxy-connect-timeout: "600"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "600"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "600"
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
      - airflow.devopsbaba.com
      secretName: ingress-tls 
  rules:
  - host: airflow.devopsbaba.com
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: airflow-webserver
            port:
              number: 8080
